--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: Welcom to CodeMonkey's homepage!
+description: Feel free to bookmakmark this to keep an eye on my project updates
